fix style footer navigation mobile (#153)

--- a/src/components/navigation/NavigationMobile.module.css
+++ b/src/components/navigation/NavigationMobile.module.css
@@ -74,6 +74,6 @@
     font-size: 10px;
     line-height: 13px;
     text-transform: uppercase;
-    float: right;
+    text-align: center;
   }
 }
